<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeAcitvity">

    <Button
        android:id="@+id/popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/alertdialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alertdialog"
        android:layout_below="@id/popup"
        />

    <Button
        android:id="@+id/customalertdialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customalertdialog"
        android:layout_below="@id/alertdialog"
        />

    <Button
        android:id="@+id/progressdialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progressdialog"
        android:layout_below="@id/customalertdialog"
        />

    <Button
        android:id="@+id/pbardialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pbardialog"
        android:layout_below="@id/progressdialog"
        />
</RelativeLayout>
